--- a/catalog.html
+++ b/catalog.html
@@ -6,32 +6,34 @@
   </head>
   <body>
   <header class="page-header">
-    <img class="header-logo" src="#" alt="Логотип город Седона">
+    <img class="header-logo" src="images/page-logo.svg" width="139" height="70" alt="Логотип город Седона.">
     <nav class="navigation">
       <ul class="navigation-list">
         <li class="navigation-item">
-          <a class="navigation-link" href="#" >Главная</a>
+          <a class="navigation-link" href="index.html">Главная</a>
         </li>
         <li class="navigation-item">
-          <a class="navigation-link" href="#" >О Седоне</a>
+          <a class="navigation-link" href="#">О Седоне</a>
         </li>
         <li class="navigation-item">
-          <a class="navigation-link navigation-link-current" href="catalog.html" >Гостиницы</a>
+          <a class="navigation-link navigation-link-current" href="catalog.html">Гостиницы</a>
         </li>
       </ul>
       <ul class="navigation-list navigation-user">
         <li class="navigation-item">
           <a class="navigation-link" href="#">
+            <img class="navigation-image" src="images/icons/search-icon.svg" width="18" height="18" alt="Лупа.">
             <span class="visually-hidden">Поиск</span>
           </a>
         </li>
         <li class="navigation-item">
           <a class="navigation-link" href="#">
+            <img class="navigation-image" src="images/icons/favorite-icon.svg" width="19" height="17" alt="Сердечко.">
             <span class="visually-hidden">Избранное</span>
           </a>
         </li>
         <li class="navigation-item">
-          <a class="navigation-link" href="#" >Хочу сюда!</a>
+          <a class="navigation-link" href="#">Хочу сюда!</a>
         </li>
       </ul>
     </nav>
@@ -41,12 +43,13 @@
       <h1 class="catalog-title">Гостиницы Седоны</h1>
       <ul class="breadcrumbs">
         <li class="breadcrumbs-item">
-          <a class="breadcrumbs-link" href="index.html" >
+          <a class="breadcrumbs-link" href="index.html">
+            <img class="breadcrumbs-image" src="images/icons/breadcrumbs-home-icon.svg" width="13" height="13" alt="Дом.">
             <span class="visually-hidden">Главная</span>
           </a>
         </li>
         <li class="breadcrumbs-item">
-          <a class="breadcrumbs-link" href="#" >Гостиницы</a>
+          <a class="breadcrumbs-link" href="#">Гостиницы</a>
         </li>
       </ul>
       <section class="catalog-filters">
@@ -108,13 +111,16 @@
         <option value="high-cost">Сначала дорогие</option>
         <option value="popular">Сначала популярные</option>
       </select>
-      <a class="view-table view-current" href="#" >
+      <a class="view-table view-current" href="#">
+        <img class="view-table-image" src="images/icons/view-table-icon.svg" width="16" height="14" alt="">
         <span class="visually-hidden">Показать карточки</span>
       </a>
       <a class="view-slides" href="#">
+        <img class="view-slides-image" src="images/icons/view-slider-icon.svg" width="16" height="14" alt="">
         <span class="visually-hidden">Показать слайды</span>
       </a>
       <a class="view-list" href="#">
+        <img class="view-list-image" src="images/icons/view-list-icon.svg" width="16" height="14" alt="">
         <span class="visually-hidden">Показать список</span>
       </a>
     </section>
@@ -123,7 +129,7 @@
       <ul class="catalog-hotels-list">
         <li class="catalog-hotels-card">
           <a class="hotel-link" href="#">
-            <img class="hotel-image" src="#" alt="Гостиница Amara Resort & Spa">
+            <img class="hotel-image" src="images/catalog/hotel-1.jpg" width="300" height="211" alt="Гостиница Amara Resort & Spa">
             <h3 class="hotel-title">Amara Resort & Spa</h3>
           </a>
           <span class="hotel-type">Гостиница</span>
@@ -131,16 +137,17 @@
           <a class="hotel-link hotel-link-details" href="#" >подробнее</a>
           <a class="hotel-link hotel-link-favorite" href="#">в избранное</a>
           <div class="hotel-stars-rate">
-            <img class="rate-star" src="#" alt="звезда">
-            <img class="rate-star" src="#" alt="звезда">
-            <img class="rate-star" src="#" alt="звезда">
-            <img class="rate-star" src="#" alt="звезда">
+            <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="звезда">
+            <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="звезда">
+            <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="звезда">
+            <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="звезда">
+
           </div>
           <span class="hotel-rating">Рейтинг: 8,5</span>
         </li>
         <li class="catalog-hotels-card">
           <a class="hotel-link" href="#">
-            <img class="hotel-image" src="#" alt="Гостиница Desert Quail Inn">
+            <img class="hotel-image" src="images/catalog/hotel-2.jpg" width="300" height="211" alt="Гостиница Desert Quail Inn">
             <h3 class="hotel-title">Villas at Poco Diablo</h3>
           </a>
           <span class="hotel-type">Гостиница</span>
@@ -148,16 +155,16 @@
           <a class="hotel-link hotel-link-details" href="#">подробнее</a>
           <a class="hotel-link hotel-link-favorite" href="#" >в избранное</a>
           <div class="hotel-stars-rate">
-            <img class="rate-star" src="#" alt="звезда">
-            <img class="rate-star" src="#" alt="звезда">
-            <img class="rate-star" src="#" alt="звезда">
-            <img class="rate-star" src="#" alt="звезда">
+            <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="звезда">
+            <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="звезда">
+            <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="звезда">
+            <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="звезда">
           </div>
           <span class="hotel-rating">Рейтинг: 9,2</span>
         </li>
         <li class="catalog-hotels-card">
           <a class="hotel-link" href="#" >
-            <img class="hotel-image" src="#" alt="Гостиница Desert Quail Inn">
+            <img class="hotel-image" src="images/catalog/hotel-3.jpg" width="300" height="211" alt="Гостиница Desert Quail Inn">
             <h3 class="hotel-title">Desert Quail Inn</h3>
           </a>
           <span class="hotel-type">Гостиница</span>
@@ -165,15 +172,15 @@
           <a class="hotel-link-details" href="#">подробнее</a>
           <a class="hotel-link-favorite" href="#">в избранное</a>
           <div class="hotel-stars-rate">
-            <img class="rate-star" src="#" alt="звезда">
-            <img class="rate-star" src="#" alt="звезда">
-            <img class="rate-star" src="#" alt="звезда">
+            <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="звезда">
+            <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="звезда">
+            <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="звезда">
           </div>
           <span class="hotel-rating">Рейтинг: 6,9</span>
         </li>
         <li class="catalog-hotels-card">
           <a class="hotel-link" href="#">
-            <img  class="hotel-image" src="#" alt="Гостиница GreenTree Inn">
+            <img  class="hotel-image" src="images/catalog/hotel-4.jpg" width="300" height="211" alt="Гостиница GreenTree Inn">
             <h3 class="hotel-title">GreenTree Inn</h3>
           </a>
           <span class="hotel-type">Гостиница</span>
@@ -181,8 +188,8 @@
           <a class="hotel-link-details" href="#">подробнее</a>
           <a class="hotel-link-favorite" href="#">в избранное</a>
           <div class="hotel-stars-rate">
-            <img class="rate-star" src="#" alt="звезда">
-            <img class="rate-star" src="#" alt="звезда">
+            <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="звезда">
+            <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="звезда">
           </div>
           <span class="hotel-rating">Рейтинг: 5,0</span>
         </li>
@@ -233,16 +240,19 @@
       <ul class="footer-contacts-list">
         <li class="footer-contacts-item">
           <a class="footer-contacts-link" href="https://vk.com/htmlacademy">
+            <img class="footer-contact-icon" src="images/icons/vk-icon.svg" width="24" height="15" alt="">
             <span class="visually-hidden">Вконтакте</span>
           </a>
         </li>
         <li class="footer-contacts-item">
           <a class="footer-contacts-link" href="https://t.me/htmlacademy">
+            <img class="footer-contact-icon" src="images/icons/telegram-icon.svg" width="18" height="17" alt="">
             <span class="visually-hidden">Телеграм</span>
           </a>
         </li>
         <li class="footer-contacts-item">
           <a class="footer-contacts-link" href="https://www.youtube.com/user/htmlacademyru">
+            <img class="footer-contact-icon" src="images/icons/youtube-icon.svg" width="22" height="17" alt="">
             <span class="visually-hidden">YouTube</span>
           </a>
         </li>
@@ -252,7 +262,7 @@
       <span class="visually-hidden">Номер телефона</span>+7 (812) 812-12-12
     </a>
     <a class="footer-html-academy-link" href="https://htmlacademy.ru/">
-      <img class="footer-html-academy-image" src="#" alt="HTML Academy">
+      <img class="footer-html-academy-image" src="images/html-academy-logo.svg" alt="HTML Academy">
     </a>
   </footer>
   </body>
