--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
   <header class="page-header">
@@ -40,7 +41,7 @@
     <section class="welcome-section">
       <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
       <img class="welcome-section-logo" src="images/welcome.svg" width="458" height="352" alt="Добро пожаловать в прекрасную Седону &quot;ибо Гранд Каньен отстой&quot;.">
-      <h2 class="welcome-section-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+      <p class="welcome-section-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
       <p class="welcome-section-subtitle">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
     </section>
     <section class="advantages" id="advantages">
