--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </a>
         </li>
         <li class="navigation-item">
-          <a class="navigation-link" href="#">Хочу сюда!</a>
+          <a class="navigation-link" href="#offer">Хочу сюда!</a>
         </li>
       </ul>
     </nav>
@@ -45,7 +45,7 @@
       <p class="welcome-section-subtitle">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
     </section>
     <section class="advantages" id="advantages">
-      <h2 class="visually-hidden">Приемущества Седоны</h2>
+      <h2 class="visually-hidden">Преимущества Седоны</h2>
       <ol class="advantages-list">
         <li class="advantages-item">
           <h3 class="advantages-title">Настоящий городок</h3>
@@ -85,7 +85,7 @@
         </li>
       </ol>
     </section>
-    <section class="offer">
+    <section class="offer" id="offer">
       <h2 class="offer-title">Заинтересовались?</h2>
       <p class="offer-description">Укажите предполагаемые даты поездки,
         и мы покажем вам лучшие предложения гостиниц в Седоне</p>
