--- a/index.html
+++ b/index.html
@@ -32,41 +32,45 @@
           </a>
         </li>
         <li class="navigation-item">
-          <a class="navigation-link" href="#offer">Хочу сюда!</a>
+          <a class="button" href="#offer">Хочу сюда!</a>
         </li>
       </ul>
     </nav>
   </header>
   <main class="main-index">
-    <section class="welcome-section">
+    <section class="welcome">
       <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
-      <img class="welcome-section-logo" src="images/welcome.svg" width="458" height="352" alt="Добро пожаловать в прекрасную Седону &quot;ибо Гранд Каньен отстой&quot;.">
-      <p class="welcome-section-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
-      <p class="welcome-section-subtitle">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+      <img class="welcome-logo" src="images/welcome.svg" width="458" height="352" alt="Добро пожаловать в прекрасную Седону &quot;ибо Гранд Каньен отстой&quot;.">
+    </section>
+    <section class="slogan">
+      <h2 class="slogan-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+      <p class="slogan-subtitle">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
     </section>
     <section class="advantages" id="advantages">
       <h2 class="visually-hidden">Преимущества Седоны</h2>
       <ol class="advantages-list">
         <li class="advantages-item">
-          <h3 class="advantages-title">Настоящий городок</h3>
-          <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-          <img class="advantages-image" src="images/advantage-image-1.jpg" width="800" height="384" alt="Мотель в Седоне.">
-          <ul class="advantages-list advantages-special-list">
+          <div class="advantages-item-blue">
+            <h3 class="advantages-title">Настоящий городок</h3>
+            <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            <img class="advantages-image" src="images/advantage-image-1.jpg" width="800" height="384" alt="Мотель в Седоне.">
+          </div>
+          <ul class="advantages-special-list">
             <li class="advantages-special-item">
-              <h3 class="advantages-special-title">Жилье</h3>
-              <p class="advantages-special-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+              <h3 class="advantages-title">Жилье</h3>
+              <p class="advantages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
             </li>
-            <li class="advantages-special-item">
-              <h3 class="advantages-special-title">Еда</h3>
+            <li class="advantages-special-item advantages-item-white">
+              <h3 class="advantages-title">Еда</h3>
               <p class="advantages-special-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
             </li>
             <li class="advantages-special-item">
-              <h3 class="advantages-special-title">Сувениры</h3>
-              <p class="advantages-special-description">Не только китайского, но и настоящего местного производства!</p>
+              <h3 class="advantages-title">Сувениры</h3>
+              <p class="advantages-description">Не только китайского, но и настоящего местного производства!</p>
             </li>
           </ul>
         </li>
-        <li class="advantages-item">
+        <li class="advantages-item advantages-item-blue">
           <h3 class="advantages-title">Там есть мост дьявола</h3>
           <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           <img class="advantages-image" src="images/advantage-image-2.jpg" alt="Мост Дьявола.">
@@ -75,7 +79,7 @@
           <h3 class="advantages-title">Небольшая площадь</h3>
           <p class="advantages-description">Все достопримечательности находятся очень близко</p>
         </li>
-        <li class="advantages-item">
+        <li class="advantages-item advantages-item-dark">
           <h3 class="advantages-title">Красивая дорога</h3>
           <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </li>
@@ -89,7 +93,7 @@
       <h2 class="offer-title">Заинтересовались?</h2>
       <p class="offer-description">Укажите предполагаемые даты поездки,
         и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-      <a class="offer-link" href="catalog.html" >Поиск гостиницы в Седоне</a>
+      <a class="button offer-button" href="catalog.html">Поиск гостиницы в Седоне</a>
     </section>
     <section class="subscribe">
       <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
