--- a/index.html
+++ b/index.html
@@ -6,135 +6,139 @@
     <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
-  <header class="page-header">
-    <img class="header-logo" src="images/page-logo.svg" width="139" height="70" alt="Логотип города Седона.">
-    <nav class="navigation">
-      <ul class="navigation-list">
-        <li class="navigation-item">
-          <a class="navigation-link navigation-link-current" href="#">Главная</a>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-link" href="#advantages">О Седоне</a>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-link" href="catalog.html">Гостиницы</a>
-        </li>
-      </ul>
-      <ul class="navigation-list navigation-user">
-        <li class="navigation-item">
-          <a class="navigation-link" href="#">
-            <span class="visually-hidden">Поиск</span>
-          </a>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-link" href="#">
-            <span class="visually-hidden">Избранное</span>
-          </a>
-        </li>
-        <li class="navigation-item">
-          <a class="button" href="#offer">Хочу сюда!</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
-  <main class="main-index">
-    <section class="welcome">
-      <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
-      <img class="welcome-logo" src="images/welcome.svg" width="458" height="352" alt="Добро пожаловать в прекрасную Седону &quot;ибо Гранд Каньен отстой&quot;.">
-    </section>
-    <section class="slogan">
-      <h2 class="slogan-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
-      <p class="slogan-subtitle">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
-    </section>
-    <section class="advantages" id="advantages">
-      <h2 class="visually-hidden">Преимущества Седоны</h2>
-      <ol class="advantages-list">
-        <li class="advantages-item">
-          <div class="advantages-item-blue">
-            <h3 class="advantages-title">Настоящий городок</h3>
-            <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            <img class="advantages-image" src="images/advantage-image-1.jpg" width="800" height="384" alt="Мотель в Седоне.">
-          </div>
-          <ul class="advantages-special-list">
-            <li class="advantages-special-item">
-              <h3 class="advantages-title">Жилье</h3>
-              <p class="advantages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-            </li>
-            <li class="advantages-special-item advantages-item-white">
-              <h3 class="advantages-title">Еда</h3>
-              <p class="advantages-special-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
-            </li>
-            <li class="advantages-special-item">
-              <h3 class="advantages-title">Сувениры</h3>
-              <p class="advantages-description">Не только китайского, но и настоящего местного производства!</p>
-            </li>
-          </ul>
-        </li>
-        <li class="advantages-item advantages-item-blue">
-          <h3 class="advantages-title">Там есть мост дьявола</h3>
-          <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-          <img class="advantages-image" src="images/advantage-image-2.jpg" alt="Мост Дьявола.">
-        </li>
-        <li class="advantages-item">
-          <h3 class="advantages-title">Небольшая площадь</h3>
-          <p class="advantages-description">Все достопримечательности находятся очень близко</p>
-        </li>
-        <li class="advantages-item advantages-item-dark">
-          <h3 class="advantages-title">Красивая дорога</h3>
-          <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-        </li>
-        <li class="advantages-item">
-          <h3 class="advantages-title">Мало туристов</h3>
-          <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
-        </li>
-      </ol>
-    </section>
-    <section class="offer" id="offer">
-      <h2 class="offer-title">Заинтересовались?</h2>
-      <p class="offer-description">Укажите предполагаемые даты поездки,
-        и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-      <a class="button offer-button" href="catalog.html">Поиск гостиницы в Седоне</a>
-    </section>
-    <section class="subscribe">
-      <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
-      <p class="subscribe-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
-      <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
-        <label for="email">e-mail</label>
-        <input type="email" id="email" name="email" placeholder="Ваш e-mail">
-        <button type="submit" class="button button-subscribe">Подписаться</button>
-      </form>
-    </section>
-  </main>
-  <footer class="page-footer">
-    <section class="footer-contacts">
-      <h2 class="visually-hidden">Социальные сети</h2>
-      <ul class="footer-contacts-list">
-        <li class="footer-contacts-item">
-          <a class="footer-contacts-link" href="https://vk.com/htmlacademy">
-            <img class="footer-contact-icon" src="images/icons/vk-icon.svg" width="24" height="15" alt="">
-            <span class="visually-hidden">Вконтакте</span>
-          </a>
-        </li>
-        <li class="footer-contacts-item">
-          <a class="footer-contacts-link" href="https://t.me/htmlacademy">
-            <img class="footer-contact-icon" src="images/icons/telegram-icon.svg" width="18" height="17" alt="">
-            <span class="visually-hidden">Телеграм</span>
-          </a>
-        </li>
-        <li class="footer-contacts-item">
-          <a class="footer-contacts-link" href="https://www.youtube.com/user/htmlacademyru">
-            <img class="footer-contact-icon" src="images/icons/youtube-icon.svg" width="22" height="17" alt="">
-            <span class="visually-hidden">YouTube</span>
-          </a>
-        </li>
-      </ul>
-    </section>
-    <a class="footer-phone-number" href="tel:+78128121212">
-      <span class="visually-hidden">Номер телефона</span>+7 (812) 812-12-12
-    </a>
-    <a class="footer-html-academy-link" href="https://htmlacademy.ru/">
-      <img class="footer-html-academy-image" src="images/html-academy-logo.svg" alt="HTML Academy">
-    </a>
-  </footer>
+  <div class="wrapper">
+    <header class="page-header">
+      <img class="header-logo" src="images/page-logo.svg" width="139" height="70" alt="Логотип города Седона.">
+      <nav class="navigation">
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="navigation-link navigation-link-current" href="#">Главная</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#advantages">О Седоне</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="catalog.html">Гостиницы</a>
+          </li>
+        </ul>
+        <ul class="navigation-list navigation-user">
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">Поиск</span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">Избранное</span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="button" href="#offer">Хочу сюда!</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main class="main-index">
+      <section class="welcome">
+        <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
+        <img class="welcome-logo" src="images/welcome.svg" width="458" height="352" alt="Добро пожаловать в прекрасную Седону &quot;ибо Гранд Каньен отстой&quot;.">
+      </section>
+      <section class="advantages" id="advantages">
+        <h2 class="visually-hidden">Преимущества Седоны</h2>
+        <strong class="advantages-promo">Седона — небольшой городок в Аризоне, заслуживающий большего!</strong>
+        <p class="advantages-subtitle">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+        <ol class="advantages-list">
+          <li class="advantages-item">
+            <div class="advantages-item-blue">
+              <h3 class="advantages-title">Настоящий городок</h3>
+              <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            </div>
+              <img class="advantages-image" src="images/advantage-image-1.jpg" width="800" height="384" alt="Мотель в Седоне.">
+            <ul class="advantages-special-list">
+              <li class="advantages-special-item">
+                <h3 class="advantages-title">Жилье</h3>
+                <p class="advantages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+              </li>
+              <li class="advantages-special-item advantages-item-white">
+                <h3 class="advantages-title">Еда</h3>
+                <p class="advantages-special-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+              </li>
+              <li class="advantages-special-item">
+                <h3 class="advantages-title">Сувениры</h3>
+                <p class="advantages-description">Не только китайского, но и настоящего местного производства!</p>
+              </li>
+            </ul>
+          </li>
+          <li class="advantages-item">
+            <div class="advantages-item-blue">
+              <h3 class="advantages-title">Там есть мост дьявола</h3>
+              <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            </div>
+            <img class="advantages-image" src="images/advantage-image-2.jpg" alt="Мост Дьявола.">
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-title">Небольшая площадь</h3>
+            <p class="advantages-description">Все достопримечательности находятся очень близко</p>
+          </li>
+          <li class="advantages-item advantages-item-dark">
+            <h3 class="advantages-title">Красивая дорога</h3>
+            <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-title">Мало туристов</h3>
+            <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
+          </li>
+        </ol>
+      </section>
+      <section class="offer" id="offer">
+        <h2 class="offer-title">Заинтересовались?</h2>
+        <p class="offer-description">Укажите предполагаемые даты поездки,
+          и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <a class="button button-offer" href="catalog.html">Поиск гостиницы в Седоне</a>
+      </section>
+      <section class="subscribe">
+        <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+        <p class="subscribe-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
+          <label for="email">e-mail</label>
+          <input type="email" id="email" name="email" placeholder="Ваш e-mail">
+          <button type="submit" class="button button-subscribe">Подписаться</button>
+        </form>
+      </section>
+    </main>
+    <footer class="page-footer">
+      <section class="footer-contacts">
+        <h2 class="visually-hidden">Социальные сети</h2>
+        <ul class="footer-contacts-list">
+          <li class="footer-contacts-item">
+            <a class="footer-contacts-link" href="https://vk.com/htmlacademy">
+              <img class="footer-contact-icon" src="images/icons/vk-icon.svg" width="24" height="15" alt="">
+              <span class="visually-hidden">Вконтакте</span>
+            </a>
+          </li>
+          <li class="footer-contacts-item">
+            <a class="footer-contacts-link" href="https://t.me/htmlacademy">
+              <img class="footer-contact-icon" src="images/icons/telegram-icon.svg" width="18" height="17" alt="">
+              <span class="visually-hidden">Телеграм</span>
+            </a>
+          </li>
+          <li class="footer-contacts-item">
+            <a class="footer-contacts-link" href="https://www.youtube.com/user/htmlacademyru">
+              <img class="footer-contact-icon" src="images/icons/youtube-icon.svg" width="22" height="17" alt="">
+              <span class="visually-hidden">YouTube</span>
+            </a>
+          </li>
+        </ul>
+      </section>
+      <address class="footer-phone-number">
+        <a class="phone-number-link" href="tel:+78128121212">
+          <span class="visually-hidden">Наш телефон</span>+7 (812) 812-12-12
+        </a>
+      </address>
+      <a class="footer-html-academy-link" href="https://htmlacademy.ru/">
+        <img class="footer-html-academy-image" src="images/html-academy-logo.svg" alt="HTML Academy">
+      </a>
+    </footer>
+  </div>
   </body>
 </html>
