--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </header>
     <main class="main-index">
       <section class="welcome">
-        <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
+        <h1 class="visually-hidden" hidden>Добро пожаловать в Седону</h1>
         <img class="welcome-logo" src="images/welcome.svg" width="458" height="352" alt="Добро пожаловать в прекрасную Седону &quot;ибо Гранд Каньен отстой&quot;.">
       </section>
       <section class="advantages" id="advantages">
