--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <img class="welcome-logo" src="images/welcome.svg" width="458" height="352" alt="Добро пожаловать в прекрасную Седону &quot;ибо Гранд Каньен отстой&quot;.">
       </section>
       <section class="advantages" id="advantages">
-        <h2 class="visually-hidden">Преимущества Седоны</h2>
+        <h2 class="visually-hidden" hidden>Преимущества Седоны</h2>
         <strong class="advantages-promo">Седона — небольшой городок в Аризоне, заслуживающий большего!</strong>
         <p class="advantages-subtitle">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
         <ol class="advantages-list">
