--- a/index.html
+++ b/index.html
@@ -48,44 +48,44 @@
         <strong class="advantages-promo">Седона — небольшой городок в Аризоне, заслуживающий большего!</strong>
         <p class="advantages-subtitle">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
         <ol class="advantages-list">
-          <li class="advantages-item">
-            <div class="advantages-item-blue">
+          <li class="advantages-important-item">
+            <div class="advantages-important-item-wrapper">
               <h3 class="advantages-title">Настоящий городок</h3>
               <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             </div>
               <img class="advantages-image" src="images/advantage-image-1.jpg" width="800" height="384" alt="Мотель в Седоне.">
             <ul class="advantages-special-list">
-              <li class="advantages-special-item">
+              <li class="advantages-item advantages-item-semi-blue-light">
                 <h3 class="advantages-title">Жилье</h3>
                 <p class="advantages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
               </li>
-              <li class="advantages-special-item advantages-item-white">
+              <li class="advantages-item">
                 <h3 class="advantages-title">Еда</h3>
                 <p class="advantages-special-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
               </li>
-              <li class="advantages-special-item">
+              <li class="advantages-item advantages-item-semi-blue-light">
                 <h3 class="advantages-title">Сувениры</h3>
                 <p class="advantages-description">Не только китайского, но и настоящего местного производства!</p>
               </li>
             </ul>
           </li>
-          <li class="advantages-item">
-            <div class="advantages-item-blue">
+          <li class="advantages-important-item ">
+            <div class="advantages-important-item-wrapper">
               <h3 class="advantages-title">Там есть мост дьявола</h3>
               <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             </div>
-            <img class="advantages-image" src="images/advantage-image-2.jpg" alt="Мост Дьявола.">
+            <img class="advantages-image" src="images/advantage-image-2.jpg" width="800" height="384" alt="Мост Дьявола.">
           </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">Небольшая площадь</h3>
+          <li class="advantages-item advantages-item-semi-blue-light">
+            <h3 class="advantages-title ">Небольшая площадь</h3>
             <p class="advantages-description">Все достопримечательности находятся очень близко</p>
           </li>
-          <li class="advantages-item advantages-item-dark">
+          <li class="advantages-item advantages-item-semi-blue-dark">
             <h3 class="advantages-title">Красивая дорога</h3>
             <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">Мало туристов</h3>
+          <li class="advantages-item advantages-item-semi-blue-light">
+            <h3 class="advantages-title ">Мало туристов</h3>
             <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
         </ol>
