--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
       </section>
       <section class="offer" id="offer">
         <h2 class="offer-title">Заинтересовались?</h2>
-        <p class="offer-description">Укажите предполагаемые даты поездки,
-          и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <p class="offer-description">Укажите предполагаемые даты поездки,<br>
+        и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <a class="button button-offer" href="catalog.html">Поиск гостиницы в Седоне</a>
       </section>
       <section class="subscribe">
