--- a/index.html
+++ b/index.html
@@ -108,24 +108,24 @@
     </main>
     <footer class="page-footer">
       <section class="footer-contacts">
-        <h2 class="visually-hidden">Социальные сети</h2>
+        <h2 class="visually-hidden" hidden>Социальные сети</h2>
         <ul class="footer-contacts-list">
           <li class="footer-contacts-item">
             <a class="footer-contacts-link" href="https://vk.com/htmlacademy">
               <img class="footer-contact-icon" src="images/icons/vk-icon.svg" width="24" height="15" alt="">
-              <span class="visually-hidden">Вконтакте</span>
+              <span class="visually-hidden" hidden>Вконтакте</span>
             </a>
           </li>
           <li class="footer-contacts-item">
             <a class="footer-contacts-link" href="https://t.me/htmlacademy">
               <img class="footer-contact-icon" src="images/icons/telegram-icon.svg" width="18" height="17" alt="">
-              <span class="visually-hidden">Телеграм</span>
+              <span class="visually-hidden" hidden>Телеграм</span>
             </a>
           </li>
           <li class="footer-contacts-item">
             <a class="footer-contacts-link" href="https://www.youtube.com/user/htmlacademyru">
               <img class="footer-contact-icon" src="images/icons/youtube-icon.svg" width="22" height="17" alt="">
-              <span class="visually-hidden">YouTube</span>
+              <span class="visually-hidden" hidden>YouTube</span>
             </a>
           </li>
         </ul>
